--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "pip install --upgrade pip && pip3 install --user -r ./mslearn-python-products/requirements.txt",
+	"postCreateCommand": "pip install --upgrade pip && pip3 install --user -r ./requirements.txt",
 	// find . -regex '.*requirements.txt$'
 	// Configure tool-specific properties.
 	"customizations": {
