Fix model and scaler

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ numpy==1.26.3
 pandas==2.2.0
 matplotlib==3.8.2
 seaborn==0.13.1
-scikit-learn==1.4.0
+scikit-learn==1.2.2
 beautifulsoup4==4.12.3
 mysql-connector-python==8.3.0
 tensorflow==2.15.0.post1
+lightgbm==4.1.0
+xgboost==2.0.3
